# promptcmd

./: CHANGELOG.md  Cargo.toml  README.md  config.example.toml  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: release.yml
docs/: CNAME  index.html
examples/: How.prompt  commitmsg.prompt  render-md.prompt
src/: lib.rs  main.rs.bak
src/cmd/: cat.rs  config.rs  create.rs  disable.rs  edit.rs  enable.rs  import.rs  list.rs  mod.rs  render.rs  resolve.rs  resolve_model.rs  run.rs  stats.rs  templates.rs
src/cmd/config/: edit.rs  list.rs  mod.rs
src/config/: appconfig.rs  appconfig_locator.rs  bin_locator.rs  locator.rs  mod.rs  promptfile_locator.rs
src/config/providers/: anthropic.rs  constants.rs  error.rs  google.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs
src/config/resolver/: base.rs  display.rs  error.rs  group.rs  mod.rs  variant.rs
src/config/resolver/resolved/: anthropic.rs  mod.rs  openai.rs
src/dotprompt/: args.rs  dotprompt.rs  mod.rs  render.rs
src/dotprompt/helpers/: ask.rs  concat.rs  exec.rs  mod.rs  prompt.rs  stdin.rs
src/dotprompt/renderers/: argmatches.rs  keyvalue.rs  mod.rs
src/executor/: mod.rs  partiallog.rs  streaming_code_extractor.rs  streaming_output.rs  structured_streaming_output.rs
src/installer/: mod.rs  symlink.rs
src/lb/: mod.rs  weighted_lb.rs
src/read/: cmd.rs
src/resolver/: base.rs  display.rs  group.rs  mod.rs  variant.rs
src/resolver/resolved/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/run/: cmd.rs
src/runner/: main.rs
src/stats/: mod.rs  rusqlite_store.rs  store.rs
src/storage/: mod.rs  promptfiles_fs.rs  promptfiles_mem.rs
wix/: main.wxs
