[package]
name = "aibox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "promptctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "promptbox"
path = "src/bin/runner.rs"

[dependencies]
clap = { version = "4.5.53", features = ["string", "env", "derive", "cargo"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0.0"
handlebars = "6.3.2"
