[package]
name = "aibox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "promptctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "promptbox"
path = "src/bin/runner.rs"

[dependencies]
clap = { version = "4.5.53", features = ["string", "env", "derive", "cargo"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0.0"
handlebars = "6.3.2"
llm = { version = "1.2.6", features = ["openai", "anthropic", "ollama"] }
tokio = "1.48.0"
log = "0.4"
env_logger = "0.11"
edit = "0.1.5"
symlink = "0.1.0"
prettytable = "0.10.0"
toml = "0.9.8"
thiserror = "2.0.17"
