[package]
name = "promptcmd"
version = "0.4.6"
edition = "2024"
repository = "https://github.com/tgalal/promptcmd"
authors = ["Tarek Galal"]
description = "Turn GenAI prompts into runnable programs"
homepage = "https://promptcmd.sh"

[package.metadata.wix]
upgrade-guid = "97645D5F-DD9C-4186-BFC5-D23561558708"
path-guid = "988825FB-0405-4029-92F7-1790458FDF78"
license = false
eula = false

[[bin]]
name = "promptctl"
path = "src/bin/ctl.rs"

[[bin]]
name = "promptcmd"
path = "src/bin/runner.rs"

[dependencies]
clap = { version = "4.5.53", features = ["string", "env", "derive", "cargo"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0.0"
handlebars = "6.3.2"
llm = { version = "1.3.6", default-features = false, features = ["rustls-tls", "anthropic", "openai", "google", "ollama", "openrouter"] }
tokio = "1.48.0"
log = "0.4"
env_logger = "0.11"
edit = "0.1.5"
symlink = "0.1.0"
prettytable = "0.10.0"
toml = "0.9.8"
thiserror = "2.0.17"
serde_json = "1.0.145"
clap-stdin = "0.8.0"
rusqlite = { version = "0.38.0", features = ["chrono", "bundled"] }
chrono = "0.4.42"
indenter = "0.3.4"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
